--- a/src/IF3070_DAI___Tugas_Besar_2_Notebook_Template.ipynb
+++ b/src/IF3070_DAI___Tugas_Besar_2_Notebook_Template.ipynb
@@ -4743,7 +4743,33 @@
         "id": "tWL3nEAELfHj"
       },
       "source": [
-        "`Provide your analysis here`"
+        "- Does my model perform better in predicting one class than the other? If so, why is that?\n",
+        "SMOTE (Synthetic Minority Over-sampling Technique) kami gunakan untuk menangani ketidakseimbangan kelas. Akan tetapi, model masih bisa lebih akurat karena ketidakseimbangan data awal sehingga SMOTE tidak dapat menyeimbangkan, beberapa alhoritma model yang dapat memengaruhi,\n",
+        "distribusi fitur juga memengaruhi.\n",
+        "\n",
+        "- To each models I have tried, which performs the best and what could be the reason? Awa\n",
+        "Algoritma yang lebih baik pada dataset berikut merupakan KNN. KNN merupakan algoritma yang bekerja dengan membandingkan instance baru dengan data train yang sudah ada berdasarkan jarak (contohnya Euclidean).\n",
+        "Dataset yang memiliki pola yang jelas dan fitur-fitur yang penting memiliki skala serupa, KNN dapat bekerja dengan sangat baik. Selain itu, dataset dengan distribusi fitur yang rapi atau kelompok data yang terpisah jelas sering kali cocok untuk KNN. Beberapa kelebihan KNN yaitu bekerja lebih baik untuk data non-linear. RobustScaler dan method lainnya yang kami gunakan juga dapat memperbaiki performa KNN.\n",
+        "\n",
+        "- Is it better for me to impute or drop the missing data? Why?\n",
+        "Kami menggunakan simpleImputer dan iterativeImputer berdasarkan beberapa pertimbangan. Kami menghapus beberapa data berdasarkan korelasi antar-featurenya dan juga mempertimbangkan persentase data yang hilang (kalau jumlah data yg hilang kecil menghapusnya bisa lebih sederhana dan efektif), jika banyak data hilang menghapus data dapat mengurangi jumlah sampel yang signifikan, pentingnya data yang hilang karena jika fitur yang hilang penting untuk prediksi maka dapat menggunakan imputasi, jenis kehilangan data, dan masih banyak lagi\n",
+        "\n",
+        "- Does feature scaling help improve my model performance?\n",
+        "Feature scaling sangat penting untuk meningkatkan performa model, terutama pada algoritma KNN yang bergantung pada jarak antar tetangga. Tanpa scaling, fitur dengan rentang nilai besar dapat mendominasi perhitungan jarak, sehingga hasil prediksi menjadi bias. Oleh karena itu, teknik seperti RobustScaler digunakan untuk standarisasi jarak pada data agar setiap fitur memiliki pengaruh yang seimbang yang cocok pada data yang memiliki outlier (sebelumnya sudah dicek bahwa hampir semua kolom memiliki outlier). Selain itu, log transformation juga bermanfaat untuk fitur kontinu dengan distribusi yang belum sempurna, terutama jika memiliki persebaran data yang luas atau skewness tinggi, karena transformasi ini membantu membuat distribusi data menjadi lebih normal, sehingga model dapat menangkap pola dengan lebih baik dan menghasilkan prediksi yang lebih akurat.\n",
+        "\n",
+        "- Does creating new features impacts the score performance?\n",
+        "Penambahan fitur mempengaruhi skor sedikit dibandingkan tanpa adanya penambahan fitur. Fitur yang ditambahkan adalah melakukan kategorisasi untuk beberapa fitur continous sehingga model dapat dengan mudah melakukan pertimbangan tanpa adanya jarak. Selain itu, dengan domain specific knowledge, ditambahkan fitur untuk mempertimbangkan apakah URL merupakan TLD dari sebuah negara resmi karena setelah melakukan skimming pada prediksi pertama, terdapat beberapa URL milik negara yang diprediksi phising padahal bukan\n",
+        "\n",
+        "- What's the best parameter for each model to run?\n",
+        "\t- Berdasarkan hasil hyperparameter tuning dengan Optuna menunjukkan parameter terbaik untuk KNN adalah k = 3, metric = \"manhattan\", dan weights = \"distance\". Dengan k = 3, model menangkap pola lokal secara optimal, sementara manhattan distance lebih stabil terhadap outlier dibanding Euclidean dan Minkowski. Pembobotan distance memberi pengaruh lebih besar pada tetangga yang dekat, sehingga meningkatkan akurasi, terutama pada data dengan distribusi yang tidak merata. Kombinasi ini memastikan prediksi yang lebih relevan dan akurat.\n",
+        "\t- Dalam model Gaussian Naive Bayes seperti pada kode Anda, parameter utama yang perlu dioptimalkan adalah mean dan varians fitur untuk setiap kategori. Parameter ini dihitung secara langsung dari data pelatihan menggunakan metode fit(), yang secara otomatis mempelajari rata-rata  dan variansi dari setiap fitur untuk setiap kelas atau kategori. Oleh karena itu, agar model berjalan dengan optimal, memastikan bahwa fitur memiliki distribusi normal atau mendekati normal adalah langkah terbaik untuk memastikan performa model yang maksimal.\n",
+        "\n",
+        "- Improvements yang dilakukan\n",
+        "mprovement dilakukan menggunakan confusion matrix, di mana saya mengamati bahwa skor precision pada kelas 0 (phishing) masih belum seimbang. Masih terdapat beberapa URL legitimate yang diprediksi sebagai phishing oleh model. Dengan bantuan confusion matrix, kami mengatasi masalah ini dengan menambahkan weight pada model KNN, sehingga jika kelas yang dipertimbangkan adalah kelas 0, bobotnya diperbesar hingga 1.8 kali dibandingkan dengan kelas 1. Penyesuaian ini berhasil meningkatkan performa model secara signifikan, terutama dalam membedakan URL phishing dan URL legitimate dengan lebih akurat.\n",
+        "\n",
+        "- Perbandingan performance dengan sklearn library dan jelasinn jenis parameternya?\n",
+        "\t- KNN dari scratch unggul karena menggunakan distance-based weights, yang menyesuaikan bobot dengan jarak tetangga, lebih akurat untuk distribusi data tidak merata. Sebaliknya, scikit-learn menggunakan uniform weights secara default, yang kurang optimal untuk dataset ini. Pendekatan pembobotan inilah yang membuat implementasi manual lebih unggul, meskipun scikit-learn lebih efisien.\n",
+        "\t- Perbandingan performa antara model Gaussian Naive Bayes yang diimplementasikan secara scatch dan model yang dihasilkan menggunakan scikit-learn library menunjukkan bahwa keduanya memiliki perbedaan yang sangat kecil. Metrik evaluasi utama seperti accuracy, precision, recall, dan f1-score untuk kedua model menghasilkan nilai yang hampir identik, dengan perbedaan persentase di bawah 1%"
       ]
     }
   ],
