--- a/src/IF3070_Tubes2_Notebook_Kelompok11.ipynb
+++ b/src/IF3070_Tubes2_Notebook_Kelompok11.ipynb
@@ -2490,38 +2490,38 @@
         "        return self\n",
         "\n",
         "    def transform(self, X):\n",
-        "        # country_code_tlds = {\n",
-        "        #     'ac', 'ad', 'ae', 'af', 'ag', 'ai', 'al', 'am', 'ao', 'ar', 'as', 'at', 'au', 'aw', 'ax', 'az',\n",
-        "        #     'ba', 'bb', 'bd', 'be', 'bf', 'bg', 'bh', 'bi', 'bj', 'bm', 'bn', 'bo', 'br', 'bs', 'bt', 'bv', 'bw', 'by', 'bz',\n",
-        "        #     'ca', 'cc', 'cd', 'cf', 'cg', 'ch', 'ci', 'ck', 'cl', 'cm', 'cn', 'co', 'cr', 'cu', 'cv', 'cw', 'cx', 'cy', 'cz',\n",
-        "        #     'de', 'dj', 'dk', 'dm', 'do', 'dz',\n",
-        "        #     'ec', 'ee', 'eg', 'er', 'es', 'et', 'eu',\n",
-        "        #     'fi', 'fj', 'fk', 'fm', 'fo', 'fr',\n",
-        "        #     'ga', 'gb', 'gd', 'ge', 'gf', 'gg', 'gh', 'gi', 'gl', 'gm', 'gn', 'gp', 'gq', 'gr', 'gs', 'gt', 'gu', 'gw', 'gy',\n",
-        "        #     'hk', 'hm', 'hn', 'hr', 'ht', 'hu',\n",
-        "        #     'id', 'ie', 'il', 'im', 'in', 'io', 'iq', 'ir', 'is', 'it',\n",
-        "        #     'je', 'jm', 'jo', 'jp',\n",
-        "        #     'ke', 'kg', 'kh', 'ki', 'km', 'kn', 'kp', 'kr', 'kw', 'ky', 'kz',\n",
-        "        #     'la', 'lb', 'lc', 'li', 'lk', 'lr', 'ls', 'lt', 'lu', 'lv', 'ly',\n",
-        "        #     'ma', 'mc', 'md', 'me', 'mg', 'mh', 'mk', 'ml', 'mm', 'mn', 'mo', 'mp', 'mq', 'mr', 'ms', 'mt', 'mu', 'mv', 'mw', 'mx', 'my', 'mz',\n",
-        "        #     'na', 'nc', 'ne', 'nf', 'ng', 'ni', 'nl', 'no', 'np', 'nr', 'nu', 'nz',\n",
-        "        #     'om',\n",
-        "        #     'pa', 'pe', 'pf', 'pg', 'ph', 'pk', 'pl', 'pm', 'pn', 'pr', 'ps', 'pt', 'pw', 'py',\n",
-        "        #     'qa',\n",
-        "        #     're', 'ro', 'rs', 'ru', 'rw',\n",
-        "        #     'sa', 'sb', 'sc', 'sd', 'se', 'sg', 'sh', 'si', 'sj', 'sk', 'sl', 'sm', 'sn', 'so', 'sr', 'st', 'su', 'sv', 'sx', 'sy', 'sz',\n",
-        "        #     'tc', 'td', 'tf', 'tg', 'th', 'tj', 'tk', 'tl', 'tm', 'tn', 'to', 'tr', 'tt', 'tv', 'tw', 'tz',\n",
-        "        #     'ua', 'ug', 'uk', 'us', 'uy', 'uz',\n",
-        "        #     'va', 'vc', 've', 'vg', 'vi', 'vn', 'vu',\n",
-        "        #     'wf', 'ws',\n",
-        "        #     'ye', 'yt',\n",
-        "        #     'za', 'zm', 'zw'\n",
-        "        # }\n",
-        "        # def categorize_tld(tld):\n",
-        "        #     return 1 if tld.lower() in country_code_tlds else 0\n",
+        "        country_code_tlds = {\n",
+        "            'ac', 'ad', 'ae', 'af', 'ag', 'ai', 'al', 'am', 'ao', 'ar', 'as', 'at', 'au', 'aw', 'ax', 'az',\n",
+        "            'ba', 'bb', 'bd', 'be', 'bf', 'bg', 'bh', 'bi', 'bj', 'bm', 'bn', 'bo', 'br', 'bs', 'bt', 'bv', 'bw', 'by', 'bz',\n",
+        "            'ca', 'cc', 'cd', 'cf', 'cg', 'ch', 'ci', 'ck', 'cl', 'cm', 'cn', 'co', 'cr', 'cu', 'cv', 'cw', 'cx', 'cy', 'cz',\n",
+        "            'de', 'dj', 'dk', 'dm', 'do', 'dz',\n",
+        "            'ec', 'ee', 'eg', 'er', 'es', 'et', 'eu',\n",
+        "            'fi', 'fj', 'fk', 'fm', 'fo', 'fr',\n",
+        "            'ga', 'gb', 'gd', 'ge', 'gf', 'gg', 'gh', 'gi', 'gl', 'gm', 'gn', 'gp', 'gq', 'gr', 'gs', 'gt', 'gu', 'gw', 'gy',\n",
+        "            'hk', 'hm', 'hn', 'hr', 'ht', 'hu',\n",
+        "            'id', 'ie', 'il', 'im', 'in', 'io', 'iq', 'ir', 'is', 'it',\n",
+        "            'je', 'jm', 'jo', 'jp',\n",
+        "            'ke', 'kg', 'kh', 'ki', 'km', 'kn', 'kp', 'kr', 'kw', 'ky', 'kz',\n",
+        "            'la', 'lb', 'lc', 'li', 'lk', 'lr', 'ls', 'lt', 'lu', 'lv', 'ly',\n",
+        "            'ma', 'mc', 'md', 'me', 'mg', 'mh', 'mk', 'ml', 'mm', 'mn', 'mo', 'mp', 'mq', 'mr', 'ms', 'mt', 'mu', 'mv', 'mw', 'mx', 'my', 'mz',\n",
+        "            'na', 'nc', 'ne', 'nf', 'ng', 'ni', 'nl', 'no', 'np', 'nr', 'nu', 'nz',\n",
+        "            'om',\n",
+        "            'pa', 'pe', 'pf', 'pg', 'ph', 'pk', 'pl', 'pm', 'pn', 'pr', 'ps', 'pt', 'pw', 'py',\n",
+        "            'qa',\n",
+        "            're', 'ro', 'rs', 'ru', 'rw',\n",
+        "            'sa', 'sb', 'sc', 'sd', 'se', 'sg', 'sh', 'si', 'sj', 'sk', 'sl', 'sm', 'sn', 'so', 'sr', 'st', 'su', 'sv', 'sx', 'sy', 'sz',\n",
+        "            'tc', 'td', 'tf', 'tg', 'th', 'tj', 'tk', 'tl', 'tm', 'tn', 'to', 'tr', 'tt', 'tv', 'tw', 'tz',\n",
+        "            'ua', 'ug', 'uk', 'us', 'uy', 'uz',\n",
+        "            'va', 'vc', 've', 'vg', 'vi', 'vn', 'vu',\n",
+        "            'wf', 'ws',\n",
+        "            'ye', 'yt',\n",
+        "            'za', 'zm', 'zw'\n",
+        "        }\n",
+        "        def categorize_tld(tld):\n",
+        "            return 1 if tld.lower() in country_code_tlds else 0\n",
         "\n",
-        "        # # Create a new column for TLD categorization\n",
-        "        # X['IsCountryCodeTLD'] = X['TLD'].apply(categorize_tld)\n",
+        "        # Create a new column for TLD categorization\n",
+        "        X['IsCountryCodeTLD'] = X['TLD'].apply(categorize_tld)\n",
         "\n",
         "        X['IsHighURLMatchScore'] = X['URLTitleMatchScore'].apply(lambda x: 1 if x > 20 else 0)\n",
         "     \n",
