--- a/src/IF3070_Tubes2_Notebook_Kelompok11.ipynb
+++ b/src/IF3070_Tubes2_Notebook_Kelompok11.ipynb
@@ -2483,8 +2483,25 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "FEATURES_TO_DROP = [\n",
+        "'DomainLength', \n",
+        "'DomainTitleMatchScore',\n",
+        "'TLD',\n",
+        "'TLDLength',\n",
+        "'TLDLegitimateProb',\n",
+        "'URLTitleMatchScore',\n",
+        "'CharContinuationRate',\n",
+        "'LargestLineLength'\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "class FeatureCreator(BaseEstimator, TransformerMixin):\n",
-        "\n",
         "    def fit(self, X, y=None):\n",
         "        self.fitted_cols = X.columns\n",
         "        return self\n",
@@ -2517,14 +2534,26 @@
         "            'ye', 'yt',\n",
         "            'za', 'zm', 'zw'\n",
         "        }\n",
+        "\n",
         "        def categorize_tld(tld):\n",
         "            return 1 if tld.lower() in country_code_tlds else 0\n",
         "\n",
-        "        # Create a new column for TLD categorization\n",
-        "        X['IsCountryCodeTLD'] = X['TLD'].apply(categorize_tld)\n",
+        "        def categorize_char_continuation_rate(rate):\n",
+        "            return 1 if rate > 0.9 else 0\n",
         "\n",
+        "        def categorize_largest_line_length(length):\n",
+        "            if length < 5000:\n",
+        "                return 0\n",
+        "            elif 5000 <= length <= 10000:\n",
+        "                return 1\n",
+        "            else:\n",
+        "                return 2\n",
+        "\n",
+        "        X['IsCountryCodeTLD'] = X['TLD'].apply(categorize_tld)\n",
         "        X['IsHighURLMatchScore'] = X['URLTitleMatchScore'].apply(lambda x: 1 if x > 20 else 0)\n",
-        "     \n",
+        "        X['CharContinuationRateCategory'] = X['CharContinuationRate'].apply(categorize_char_continuation_rate)\n",
+        "        X['LargestLineLengthCategory'] = X['LargestLineLength'].apply(categorize_largest_line_length)\n",
+        "\n",
         "        return X"
       ]
     },
